<resources>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">BATAL</string>
    <string name="message_permission_needed">Permission Needed</string>
    <string name="message_request_permission">Permission needs to be granted to access this feature</string>
    <string name="error">Error</string>
    <string name="password_mismatch">Incorrect Password</string>
    <string name="must_not_empty">Field harus diisi</string>
    <string name="invalid_email_format">Invalid Email Format</string>
    <string name="message_minimum_length">Minimum length is %d characters</string>
    <string name="text_telephone">Telepon:</string>
    <string name="text_close">Tutup</string>
    <string name="text_no_data">Tidak ada data.</string>
    <string name="text_no_notif">Tidak ada notifikasi.</string>
    <string name="button_close">TUTUP</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_dashboard">Dasbor</string>
    <string name="menu_notif">Notif</string>
    <string name="menu_account">Akun</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_forgot_password">Lupa Password?</string>
    <string name="button_login">MASUK</string>
    <string name="message_error_credentials">Username atau Password salah</string>
    <string name="label_driver">Driver</string>
    <string name="label_mechanic">Mekanik</string>
    <string name="title_forgot_password">Lupa Password</string>
    <string name="message_forgot_password">Apa kamu ingin mengganti password?Masukkan username di bawah ini. Admin akan menghubungi untuk password baru.</string>
    <string name="hint_input_username">Masukkan username</string>
    <string name="button_request_new_password">REQUEST PASSWORD BARU</string>
    <string name="message_success_forgot_password">Anda berhasil meminta perubahan password, admin telah mengirimkan ke email Anda.</string>
    <string name="message_fail_forgot_password">Anda gagal meminta perubahan password. Silakan hubungi CS untuk mengakses akun Anda kembali.</string>
    <string name="button_check_email">CEK EMAIL</string>
    <string name="title_my_account">Akun Saya</string>
    <string name="title_edit_account">Ubah Akun</string>
    <string name="button_edit_account">UBAH</string>
    <string name="button_view_account">LIHAT</string>
    <string name="button_other_informations">Informasi Lainnya</string>
    <string name="button_service_report">Laporan Kerusakan</string>
    <string name="button_service_request">Service Request</string>
    <string name="button_settings">Settings</string>
    <string name="button_refill">Refill</string>
    <string name="button_logout">Keluar</string>
    <string name="title_logout">Logout ?</string>
    <string name="label_dob">DOB</string>
    <string name="label_id_number">ID NUMBER</string>
    <string name="label_licens_type">LICENSE TYPE</string>
    <string name="label_license_number">LICENSE NUMBER</string>
    <string name="label_language">Bahasa</string>
    <string name="label_show_data">Perlihatkan Data</string>
    <string name="title_dialog_cancel_pair">Anda Akan Membatalkan Sambungan</string>
    <string name="message_dialog_cancel_pair">Jika membatalkan berarti sambungan dengan fleet ini akan terputus, apa Anda yakin?</string>
    <string name="button_cancel_pair">PUTUSKAN</string>
    <string name="button_schedule_repair">Jadwal Perbaikan</string>
    <string name="button_breakdown_report">Breakdown Report</string>
    <string-array name="language">
        <item>Bahasa Indonesia</item>
        <item>Bahasa Inggris</item>
    </string-array>
    <string-array name="show_data">
        <item>1 Hari</item>
        <item>7 Hari</item>
        <item>14 Hari</item>
        <item>30 Hari</item>
    </string-array>
    <string name="hint_search">Search</string>
    <string name="label_current_task">Pekerjaan Saat Ini</string>
    <string name="label_task_history">Riwayat Pekerjaan</string>
    <string name="label_today">Hari ini</string>
    <string name="label_all">Semua</string>
    <string name="label_master_data">Master Data</string>
    <string name="label_view">Lihat</string>
    <string name="label_task_progress_done">Selesai</string>
    <string name="label_task_progress_ongoing">Dalam Proses</string>
    <string name="label_fleet_plate">Plat Fleet</string>
    <string name="label_description">Deskripsi</string>
    <string name="label_time">Waktu</string>
    <string name="button_accept_task">AMBIL TUGAS</string>
    <string name="button_track_task">LACAK PERJALANAN</string>
    <string name="title_accept_this_task">Terima Tugas Ini?</string>
    <string name="label_location">Lokasi</string>
    <string name="label_view_map">Lihat Map</string>
    <string name="button_accept">TERIMA</string>
    <string name="button_duplicate_task">Salin Penugasan</string>
    <string name="button_continue_duplicate">Lanjut Salin</string>
    <string name="label_pick_est_departure_time">Estimasi Waktu Keberangkatan</string>
    <string name="title_fail_duplicate_do">Gagal</string>
    <string name="message_fail_duplicate_do">Anda perlu terhubung dengan armada anda untuk dapat melakukan penyalinan</string>
    <string name="title_scan">Scan</string>
    <string name="title_scan_fleet_barcode">Scan Barcode Kendaraan</string>
    <string name="message_scan_barcode">Posisikan barcode pada kotak yang tersedia agar mudah dibaca</string>
    <string name="button_back_to_home">KE BERANDA</string>
    <string name="title_success_scan">Berhasil Memindai Fleet</string>
    <string name="title_fail_scan">Gagal Memindai Fleet!</string>
    <string name="message_fail_scan">Silakan pindai ulang untuk menggunakan fleet ini!</string>
    <string name="message_fail_scan_for_pair">Silakan pindai ulang untuk terhubung dengan fleet ini!</string>
    <string name="button_continue">LANJUTKAN</string>
    <string name="button_retry">ULANGI</string>
    <string name="title_checksheet">Cek Kendaraan</string>
    <string name="title_fleet_info">Informasi Kendaraan</string>
    <string name="title_safety_checksheet">Safety Check Sheet</string>
    <string name="title_waiting_checksheet">Sedang Menunggu</string>
    <string name="message_waiting_checksheet">Data masih diproses untuk approval</string>
    <string name="button_back_to_home_long">KEMBALI KE BERANDA</string>
    <string name="title_track_task">Lacak Perjalanan</string>
    <string name="text_arrival_time">Akan Tiba Pada %s</string>
    <string name="message_current_task">Saat ini Anda sedang mengerjakan %s</string>
    <string name="text_estimated_trip_until">Estimasi Perjalanan Hingga\n%s</string>
    <string name="button_upload_pod">UPLOAD POD</string>
    <string name="button_view_pod">LIHAT POD</string>
    <string name="label_trip_info">Info Perjalanan</string>
    <string name="label_view_detail">Lihat Detail</string>
    <string name="label_wo_description">WO Description</string>
    <string name="label_wo_destination">WO Destination Name</string>
    <string name="label_break_time">Break Time</string>
    <string name="label_loading_time">Loading Time</string>
    <string name="label_est_departure_time">Est Departure Time</string>
    <string name="label_est_arrival_time">Est Arrival Time</string>
    <string name="label_pic_name">PIC Name</string>
    <string name="label_pic_phone">PIC Phone</string>
    <string name="button_copy_phone_number">SALIN NO. TELP</string>
    <string name="title_view_pod">Lihat POD</string>
    <string name="title_upload_photo">Upload Foto</string>
    <string name="message_pick_photo">Ambil foto</string>
    <string name="title_photo_caption">Caption</string>
    <string name="hint_photo_caption">Masukkan caption</string>
    <string name="button_upload">UPLOAD</string>
    <string name="button_back">KEMBALI</string>
    <string name="button_swipe_to_complete_task">Geser Untuk Selesaikan Penugasan</string>
    <string name="message_confirmation_complete_task">Total check in anda masih %s, apakah anda yakin untuk mengakui penyelesaian penugasan ini?</string>
    <string name="button_create_service_request">Buat Service Request</string>
    <string name="button_view_service_history">Lihat Riwayat Service</string>
    <string name="button_view_service_status">Lihat Status Service</string>
    <string name="title_service_request">Service Request</string>
    <string name="title_service">Service</string>
    <string name="label_service_number">Service Number</string>
    <string name="label_activity_summary">Ringkasan Aktivitas</string>
    <string name="hint_service_number">Masukkan Service Number</string>
    <string name="hint_activity_summary">Tuliskan nama aktivitas</string>
    <string name="hint_service_request_description">Jelaskan aktivitas yang dilakukan</string>
    <string name="title_time_and_place">Waktu &amp; Tempat</string>
    <string name="label_workshop">Workshop</string>
    <string name="label_pick_time">Pilih Waktu</string>
    <string name="hint_workshop">Pilih Workshop</string>
    <string name="hint_pick_time">Pilih tanggal dan waktu</string>
    <string name="title_fleet">Fleet</string>
    <string name="label_plate_number">Nomor Plat</string>
    <string name="label_odometer">Odometer</string>
    <string name="hint_plate_number">Masukkan nomor plat</string>
    <string name="hint_odometer">00</string>
    <string name="button_submit">SUBMIT</string>
    <string name="title_create_service_schedule">Buat Jadwal Service</string>
    <string name="messaeg_create_service_schedule">Silakan lanjutkan untuk menjadwalkan service Anda</string>
    <string name="button_add_service_activity">Tambah Detail Aktivitas</string>
    <string name="label_service_activity_type">Jenis Aktivitas</string>
    <string name="label_service_activity_detail">Detail Aktivitas</string>
    <string name="title_delete_service_activity">Hapus Detail Aktivitas</string>
    <string name="message_delete_service_activity">Apakah Anda ingin menghapus detail aktivitas ini?</string>
    <string name="button_delete">HAPUS</string>
    <string name="label_activity_type">Jenis Kegiatan</string>
    <string name="label_service_schedule">Jadwal Service</string>
    <string name="label_tags">Tags</string>
    <string name="label_status">Status</string>
    <string name="message_banner_fill_ticket">Silakan isi incident ticket ini sesuai dengan kejadian</string>
    <string name="message_banner_ticket_submitted">Tiket insiden sedang telah disubmit, silakan tunggu untuk approval</string>
    <string name="message_banner_mechanic_found">Berhasil menghubungi mekanik</string>
    <string name="title_storing_request">Storing Request</string>
    <string name="title_incident_ticket">Tiket Insiden</string>
    <string name="label_ticket_number">Ticket Number</string>
    <string name="hint_ticket_number">Masukkan nomor tiket</string>
    <string name="label_incident">Incident</string>
    <string name="hint_incident">Tuliskan nama kejadian</string>
    <string name="label_storing_description">Activity Description</string>
    <string name="hint_storing_description">Tuliskan kronologi kejadian</string>
    <string name="label_current_odometer">Current Odometer</string>
    <string name="label_use_current_location">Gunakan lokasi saat ini</string>
    <string name="label_done_pinpoint">Sudah pin point</string>
</resources>