<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary50"
    tools:context=".mechanic.service_request.ServiceRequestActivity">
    <com.automa.ui.custom_component.ToolbarBasic
        android:id="@+id/toolbarServiceRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbarText="@string/title_service_request"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarServiceRequest"
        app:layout_constraintBottom_toTopOf="@id/llButtons">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="?attr/actionBarSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="16dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Typography.Subtitle1_SemiBold"
                    android:text="@string/title_service"
                    android:textColor="@color/primary500"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_service_number"
                    style="@style/Typography.Caption_Regular"
                    android:textColor="@color/neutral500"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilServiceNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/TextInputLayout.Dark">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtServiceNumber"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:backgroundTint="@color/primary500"
                        style="@style/TextInputEditText"
                        android:maxLines="1"
                        android:inputType="text"
                        android:textColor="@color/primary500"
                        android:hint="@string/hint_service_number" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_activity_summary"
                    style="@style/Typography.Caption_Regular"
                    android:textColor="@color/neutral500"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilActivitySummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/TextInputLayout.Dark">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtActivitySummary"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:backgroundTint="@color/primary500"
                        style="@style/TextInputEditText"
                        android:maxLines="1"
                        android:inputType="text"
                        android:textColor="@color/primary500"
                        android:hint="@string/hint_activity_summary" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_description"
                    style="@style/Typography.Caption_Regular"
                    android:textColor="@color/neutral500"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/TextInputLayout.Dark">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primary500"
                        style="@style/TextInputEditText"
                        android:lines="4"
                        android:gravity="top"
                        android:textColor="@color/primary500"
                        android:hint="@string/hint_service_request_description" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnAddTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_add_tag"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:padding="16dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Typography.Subtitle1_SemiBold"
                    android:text="@string/title_time_and_place"
                    android:textColor="@color/primary500"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_workshop"
                    style="@style/Typography.Caption_Regular"
                    android:textColor="@color/neutral500"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilWorkshop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/TextInputLayout.Dark"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
                    app:endIconTint="@color/neutral500">
                    <AutoCompleteTextView
                        android:id="@+id/edtWorkshop"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginTop="6dp"
                        android:backgroundTint="@color/primary500"
                        style="@style/TextInputEditText"
                        android:textColor="@color/primary500"
                        android:hint="@string/hint_workshop"
                        android:focusable="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_pick_time"
                    style="@style/Typography.Caption_Regular"
                    android:textColor="@color/neutral500"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/TextInputLayout.Dark"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_calendar">
                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/edtDateTime"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:backgroundTint="@color/primary500"
                        style="@style/TextInputEditText"
                        android:textColor="@color/primary500"
                        android:hint="@string/hint_pick_time"
                        android:focusable="false"
                        android:cursorVisible="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:padding="16dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Typography.Subtitle1_SemiBold"
                    android:text="@string/title_fleet"
                    android:textColor="@color/primary500"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_plate_number"
                    style="@style/Typography.Caption_Regular"
                    android:textColor="@color/neutral500"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilFleetPlate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/TextInputLayout.Dark">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtFleetPlate"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:backgroundTint="@color/primary500"
                        style="@style/TextInputEditText"
                        android:maxLines="1"
                        android:inputType="text"
                        android:textColor="@color/primary500"
                        android:hint="@string/hint_plate_number" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_odometer"
                    style="@style/Typography.Caption_Regular"
                    android:textColor="@color/neutral500"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilOdometer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/TextInputLayout.Dark">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtOdometer"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:backgroundTint="@color/primary500"
                        style="@style/TextInputEditText"
                        android:maxLines="1"
                        android:textColor="@color/primary500"
                        android:inputType="numberDecimal"
                        android:hint="00" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            style="@style/ButtonWhiteBordered"
            android:text="@string/cancel"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            style="@style/ButtonPrimary"
            android:text="@string/button_submit"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>