<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shared.scanner.ScannerActivity">
    <com.automa.ui.custom_component.ToolbarBasic
        android:id="@+id/toolbarScanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbarText="@string/title_scan"
        app:layout_constraintTop_toTopOf="parent"/>
    <RelativeLayout
        android:id="@+id/tvLabelScanFleet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/toolbarScanner">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Typography.H6_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_scan_fleet_barcode"
            android:textColor="@color/primary500" />
    </RelativeLayout>
    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scannerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:autoFocusButtonVisible="false"
        app:flashButtonVisible="false"
        app:frameColor="@color/black"
        app:frameCornersSize="50dp"
        app:frameCornersRadius="0dp"
        app:frameAspectRatioWidth="1"
        app:frameAspectRatioHeight="1"
        app:frameSize="0.9"
        app:frameThickness="3dp"
        app:maskColor="@color/colorTransparent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelScanFleet"
        app:layout_constraintBottom_toTopOf="@id/llScannerBottom"/>
    <LinearLayout
        android:id="@+id/llScannerBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="32dp"
            android:paddingHorizontal="26dp"
            style="@style/Typography.Body1_Regular"
            android:text="@string/message_scan_barcode"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_continue"
            android:visibility="gone"
            style="@style/ButtonPrimaryLighter"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>