<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDialog"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="72dp"
        app:srcCompat="@drawable/illustration_success_forgot_password"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/Typography.Body1_SemiBold"
        android:gravity="center"
        android:text="@string/message_success_forgot_password"
        android:textColor="@color/neutral500"/>

    <LinearLayout
        android:id="@+id/llPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Typography.Body1_SemiBold"
            android:gravity="center"
            android:text="@string/text_telephone"
            android:textColor="@color/neutral500"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Typography.Body1_Bold"
            android:gravity="center"
            android:text="021 5924 309"
            android:textColor="@color/neutral500"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/button_check_email"
        style="@style/ButtonPrimaryLighter"/>
</LinearLayout>